General information for workers

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Eventbiz is event and conference website template">
     <meta name="keywords" content="camp, conference, conference theme, event, event schedule, event website, event wordpress theme, exhibition, expo">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" href="{% static 'cv/favicon.ico' %}">
     <!--[if lt IE 9]>
 	<script src="{% static 'js/html5shiv.js' %}"></script>
 	<![endif]-->
